# Submarine_Capstone

./: .colconignore  README.md  team_notes
.github/workflows/: docker-publish.yml
.metadata/: .log4j2.xml  version.ini
manufacturing_stls/: BackCap.stl  Balast_Left.stl  Balast_Right.stl  Fin.stl  Plunger_Left.stl  Plunger_Right.stl  Primary_Dome.stl  Prop_Housing.stl  README.md  Secondary_Cap.stl  Secondary_Dome_Left.stl  Secondary_Dome_Right.stl  Secondary_Hull.stl  Threaded_Rods_final.stl
pcb_files/Footprints/: DRV8841PWP.IntLib  NUCLEO-F401RE.IntLib  NUCLEO-F446ZE.IntLib
pcb_files/HBridge/: CAMtastic1.Cam  CAMtastic2.Cam  CAMtastic3.Cam  CAMtastic4.Cam  CAMtastic5.Cam  DXPPreferences1.DXPPrf  DualDriver.SchDoc  DualDriverProp.SchDoc  DualDriverStepperLeft.SchDoc  HBridge.PcbDoc  HBridge.PrjPcb  HBridge.PrjPcbStructure  HBridge.SchDoc  HBridge.SchLib  HBridge.txt  HBridgeBackup.PcbDoc  PcbLib1.PcbLib
pcb_files/Remote_Controller/: CAMtastic1.Cam  CAMtastic2.Cam  CAMtastic3.Cam  Remote_Controller.PcbDoc  Remote_Controller.PrjPcb  Remote_Controller.PrjPcbStructure  Remote_Controller.SchDoc
pcb_files/Submarine/: DualDriverProp.SchDoc  DualDriverStepperLeft.SchDoc  DualDriverStepperRight.SchDoc  PCB1.PcbDoc  Submarine.PcbDoc  Submarine.PrjPcb  Submarine.PrjPcbStructure  Submarine.SchDoc
pcb_files/Submarine_Control/: CAMtastic1.Cam  CAMtastic10.Cam  CAMtastic11.Cam  CAMtastic2.Cam  CAMtastic3.Cam  CAMtastic4.Cam  CAMtastic5.Cam  CAMtastic6.Cam  (+7 more)
ros2_ws/: README.md  controller_Dockerfile  controller_compose.yaml  controller_entrypoint.sh  publish_controller.yaml  sub_Dockerfile  sub_compose.yaml  sub_entrypoint.sh
ros2_ws/src/controller_gui/: package.xml  pyproject.toml  setup.cfg  setup.py
ros2_ws/src/controller_gui/controller_gui/: con_gui.py  overlay.py
ros2_ws/src/controller_publisher/: package.xml  pyproject.toml  setup.cfg  setup.py
ros2_ws/src/controller_publisher/controller_publisher/: con_pub.py
start/: controller_start.sh  sub_start.sh
stm32_ws/: README.md
(+1361 files in other folders)
