[tool.poetry]
name = "controller-publisher"
version = "0.1.0"
description = "Data publisher for controller input to sub"
authors = ["jacobcwildes <wildes126@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
serial = "^0.0.97"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
