[tool.poetry]
name = "controller_publisher"
version = "0.1.0"
description = "Data publisher for controller input to sub"
authors = ["jacobcwildes <wildes126@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
serial = "^0.0.97"

[tool.poetry.scripts]
con_pub = "controller_publisher.con_pub:main"

[tool.colcon-poetry-ros.data-files]
"share/ament_index/resource_index/packages" = ["resource/controller_publisher"]
"share/controller_publisher" = ["package.xml"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
